--- a/fejlesztes.html
+++ b/fejlesztes.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="benchmark.css">
   <link rel="stylesheet" href="tablakezelo.js">
   <script src="js/bootstrap.min.js"></script>
+  <script src="tablakezelo.js"></script>
 </head>
 
 <body>
